[gd_scene load_steps=6 format=3 uid="uid://b3x0wko2kygau"]

[ext_resource type="Script" uid="uid://bb08weeru3c3c" path="res://scripts/Game.gd" id="1"]
[ext_resource type="Script" uid="uid://cx8wh45qc2dts" path="res://scripts/Map.gd" id="2"]
[ext_resource type="PackedScene" path="res://scenes/panels/CaravanPanel.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/panels/TradePanel.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://pybonc2rcxwf" path="res://assets/bg/world_map.webp" id="5"]

[node name="Game" type="Node"]
script = ExtResource("1")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Left" type="Control" parent="UI"]
anchors_preset = 0
anchor_right = 0.72
anchor_bottom = 1.0

[node name="Map" type="Control" parent="UI/Left"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="Background" type="TextureRect" parent="UI/Left/Map"]
z_index = -1
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource("5")
stretch_mode = 4

[node name="Right" type="Control" parent="UI"]
anchors_preset = 0
anchor_left = 0.72
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Status" type="HBoxContainer" parent="UI/Right"]
layout_mode = 0
anchor_right = 1.0
offset_bottom = 28.0

[node name="PlayerSel" type="OptionButton" parent="UI/Right/Status"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Gold" type="Label" parent="UI/Right/Status"]
layout_mode = 2
text = "Gold: 0"

[node name="Caravans" type="Label" parent="UI/Right/Status"]
layout_mode = 2
text = "Caravans: 0"

[node name="Tick" type="Label" parent="UI/Right/Status"]
layout_mode = 2
text = "Tick: 0"

[node name="Loc" type="Label" parent="UI/Right/Status"]
layout_mode = 2
text = "Location: Colony"

[node name="Cap" type="Label" parent="UI/Right/Status"]
layout_mode = 2
text = "Cargo: 0/0"

[node name="Speed" type="Label" parent="UI/Right/Status"]
layout_mode = 2
text = "Speed: 1.0"

[node name="PauseBtn" type="Button" parent="UI/Right/Status"]
layout_mode = 2
text = "||"

[node name="PlayBtn" type="Button" parent="UI/Right/Status"]
layout_mode = 2
text = ">"

[node name="FastBtn" type="Button" parent="UI/Right/Status"]
layout_mode = 2
text = ">>"

[node name="Tabs" type="TabContainer" parent="UI/Right"]
layout_mode = 0
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.75
current_tab = 0

[node name="Trade" type="Control" parent="UI/Right/Tabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="TradePanel" parent="UI/Right/Tabs/Trade" instance=ExtResource("4")]
layout_mode = 0
anchor_right = 0.0
anchor_bottom = 0.0

[node name="Caravan" type="Control" parent="UI/Right/Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="CaravanPanel" parent="UI/Right/Tabs/Caravan" instance=ExtResource("3")]
layout_mode = 0
anchor_right = 0.0
anchor_bottom = 0.0

[node name="Options" type="Control" parent="UI/Right/Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Lang" type="OptionButton" parent="UI/Right/Tabs/Options"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Help" type="Control" parent="UI/Right/Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="HelpText" type="RichTextLabel" parent="UI/Right/Tabs/Help"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_enabled = true

[node name="Log" type="RichTextLabel" parent="UI/Right"]
layout_mode = 0
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 0.93
bbcode_enabled = true
scroll_following = true

[node name="Cmd" type="LineEdit" parent="UI/Right"]
layout_mode = 0
anchor_top = 0.93
anchor_right = 1.0
anchor_bottom = 1.0
placeholder_text = "command (optional)"
caret_blink = true

[node name="Tick" type="Timer" parent="."]
autostart = true
